--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/GetSendBoxMessageDetails.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/GetSendBoxMessageDetails.cshtml
@@ -50,7 +50,7 @@
                         <!-- /.card-footer -->
                         <div class="card-footer">
                             
-                            <button type="button" class="btn btn-danger float-right"><i class="far fa-trash-alt"></i> Delete</button>
+                            <button type="button" class="btn btn-default float-right"><i class="far fa-trash-alt"></i> Sil</button>
                     
                         </div>
                         <!-- /.card-footer -->
