--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
@@ -5,12 +5,12 @@
 		<div class="container">
 			<ul class="header-links pull-left">
 				<li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-				<li><a href="#"><i class="fa fa-envelope-o"></i> aliogullarpnar@gmail.com</a></li>
+				<li><a href="#"><i class="fa fa-envelope-o"></i> rhythmicsite@hotmail.com</a></li>
 				<li><a href="#"><i class="fa fa-map-marker"></i> Beşiktaş İSTANBUL</a></li>
 			</ul>
 			<ul class="header-links pull-right">
-				<li><a asp-area="" asp-controller="AboutUs" asp-action="Index"> Hakkımızda</a></li>
-				<li><a asp-area="" asp-controller="Contact" asp-action="Index"> İletişim</a></li>
+				<li><a asp-area="" asp-controller="AboutUs" asp-action="Index" target="_blank"> Hakkımızda</a></li>
+				<li><a asp-area="" asp-controller="Contact" asp-action="Index" target="_blank"> İletişim</a></li>
 			</ul>
 		
 		</div>
