--- a/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
@@ -4,5 +4,6 @@
 @using RhythmicRealm.Shared.ViewModels.BrandViewModels
 @using RhythmicRealm.Shared.ViewModels.MainCategoryViewModels
 @using RhythmicRealm.Shared.ViewModels.Others
+@using RhythmicRealm.Shared.ViewModels.MessageViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
