--- a/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/GetUserMessageDetails.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Areas/Admin/Views/Message/GetUserMessageDetails.cshtml
@@ -22,7 +22,7 @@
                     <div class="card card-primary card-outline">
                         <div class="card-header">
                             <h3 class="card-title">Mail kutusu</h3>
-                            <span class="mailbox-read-time float-right">@Model.MessageDate</span>
+                            <span class="mailbox-read-time float-right">@Model?.MessageDate</span>
                         </div>
                         <!-- /.card-header -->
 
@@ -49,12 +49,9 @@
                         </div>
                         <!-- /.card-footer -->
                         <div class="card-footer">
-                            <div class="float-right">
-                                <button type="button" class="btn btn-default"><i class="fas fa-reply"></i> Reply</button>
-                                <button type="button" class="btn btn-default"><i class="fas fa-share"></i> Forward</button>
-                            </div>
-                            <button type="button" class="btn btn-default"><i class="far fa-trash-alt"></i> Delete</button>
-                            <button type="button" class="btn btn-default"><i class="fas fa-print"></i> Print</button>
+                           
+                            <a asp-area="Admin" asp-controller="Message" asp-action="SoftDeleteUserMessage" asp-route-id="@Model.Id" type="button" class="btn btn-default float-right"><i class="far fa-trash-alt"></i> Sil</a>
+                          
                         </div>
                         <!-- /.card-footer -->
 
