--- a/RhythmicRealm/RhythmicRealm.UI/Views/AboutUs/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/AboutUs/Index.cshtml
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>RhythmicRealm-About Page</title>
+    <title>RhythmicRealm-Hakkımızda</title>
 
 
     <!-- Additional CSS Files -->
