some errors related basket fixed

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_BasketLayout.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_BasketLayout.cshtml
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>Electro - HTML Ecommerce Template</title>
+	<title>Rhythmic Realm|Sepet</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -24,6 +24,12 @@
 	<!-- Font Awesome Icon -->
 	<link rel="stylesheet" href="~/ui/css/font-awesome.min.css">
 
+	<script src="~/ui/js/jquery.min.js"></script>
+	<script src="~/ui/js/bootstrap.min.js"></script>
+	<script src="~/ui/js/slick.min.js"></script>
+	<script src="~/ui/js/nouislider.min.js"></script>
+	<script src="~/ui/js/jquery.zoom.min.js"></script>
+	<script src="~/ui/js/main.js"></script>
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="~/ui/css/style.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/~/Basket/assets/css/bootstrap.min.css">
