--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_HeaderPartial.cshtml
@@ -70,8 +70,7 @@
 
 									<vc:cart></vc:cart>
 								}
-								else
-								{
+								else{
 									<div>
 										<div class="dropdown text-center">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color:white" role="button" aria-haspopup="true" aria-expanded="false">
@@ -117,7 +116,7 @@
 									</a>
 
 								</div>
-								<vc:cart></vc:cart>
+								
 							}
 
 
