--- a/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Basket/Index.cshtml
@@ -15,9 +15,13 @@
 					<div class="container">
 						<div class="content">
 							<div class="row">
-								@if (Model.BasketItems.Count != 0)
+								@if (Model.BasketItems.Count == 0)
 								{
-									<div class="col-md-12 col-lg-8">
+									<div class="alert alert-warning">
+										Sepetinizde ürün bulunmamaktadır.
+									</div>
+								}
+								<div class="col-md-12 col-lg-8">
 										<div class="items">
 
 											@foreach (var item in Model.BasketItems)
@@ -32,17 +36,17 @@
 																<div class="row">
 																	<div class="col-md-5 product-name">
 																		<div class="product-name">
-																			<a href="#"><strong>@item.Name</strong></a>
+																			<a asp-area="" asp-controller="ProductDetails" asp-action="Index" asp-route-id="@item.ProductId"><strong>@item.Name</strong></a>
 
 																		</div>
 																	</div>
 																	<div class="col-md-2 quantity">
 																		<label for="quantity">Adet</label>
-																		<input id="quantity" type="number" value="1"
+																		<input onchange="" id="quantity" type="number" value="1"
 																			   class="form-control quantity-input">
 																	</div>
 																	<div class="col-md-3 price">
-																		<span>@($"{item.Price:C2}")</span>
+																		<span id="item-total">@($"{item.Price:C2}")</span>
 																	</div>
 																	<div class="col-md-1">
 																		<a asp-area="" asp-controller="Basket" asp-action="RemoveFromBasket" asp-route-productId="@item.ProductId" style="float: right;">
@@ -60,19 +64,13 @@
 											}
 
 										</div>
-									</div>
-								}
-								else
-								{
-									<div class="alert alert-warning">
-										Sepetinizde ürün bulunmamaktadır.
-									</div>
-								}
+								</div>
+								
 								<div class="col-md-12 col-lg-4">
 									<div class="summary">
 										<h3>Sipariş Özeti</h3>
 										<div class="summary-item">
-											<span class="text">Ürünün Toplamı</span><span class="price">@($"{Model.TotalPrice():C2}")</span>
+											<span id="basket-total" class="text">Ürünün Toplamı</span><span class="price">@($"{Model.TotalPrice():C2}")</span>
 										</div>
 										<div class="summary-item">
 											@{
@@ -80,16 +78,24 @@
 												var discount =(double) total * 0.1;
 												var newTotal = (double)total - discount;
 											}
-											<span class="text">İndirim</span><span class="price">@($"{discount:C2}")</span>
+											<span id="discount" class="text">Sepette %10 İndirim </span><span class="price">@($"{discount:C2}")</span>
 										</div>
 										<div class="summary-item">
 											<span class="text">Kargo</span><span class="price">@($"{0:C2}")</span>
 										</div>
 										<div class="summary-item">
-											<span class="text">Toplam</span><span class="price">@($"{newTotal:C2}")</span>
+											<span id="new-total" class="text">Toplam</span><span class="price">@($"{newTotal:C2}")</span>
 										</div>
 										<div>
-											<a asp-area="" asp-controller="CheckOut" asp-action="Index" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
+											@if (User.Identity.IsAuthenticated)
+											{
+												<a asp-area="" asp-controller="CheckOut" asp-action="Index" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
+											}
+											else
+											{
+												<a asp-area="" asp-controller="Account" asp-action="Login" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
+											}
+
 										</div>
 
 									</div>
@@ -140,3 +146,28 @@
 	<!-- /container -->
 </div>
 <!-- /NEWSLETTER -->
+
+<script>
+        function changeQuantity () {
+		var productId = $(this).closest(".product").data("product-id");
+		var newQuantity = $(this).val();
+		$.ajax({
+			type: "POST",
+			url: "/Basket/UpdateQuantity",
+			data: { shoppingBasketItemId: productId, quantity: newQuantity },
+			success: function (response) {
+				if (response.success) {
+					$("#item-total").text(response.basketItemTotal);
+					$("#discount").text(response.discount);
+					$("#basket-total").text(response.basketTotal);
+					$("#new-total").text(response.newTotal);
+				} else {
+					alert("Bir hata oluştu: " + response.message);
+				}
+			},
+			error: function () {
+				alert("Bir hata oluştu. Lütfen tekrar deneyin.");
+			}
+		});
+	});
+</script>
