--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/Components/Cart/Default.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/Components/Cart/Default.cshtml
@@ -1,42 +1,44 @@
-﻿<!-- Cart -->
+﻿@model int
+
+<!-- Cart -->
 <div class="dropdown">
 	<a  class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 
 		<i class="fa fa-shopping-cart"></i>
 		<span>Sepetim</span>
-		<div class="qty">3</div>
+		<div class="qty">@Model</div>
 	</a>
 	<div class="cart-dropdown">
 		<div class="cart-list">
-			<div class="product-widget">
-				<div class="product-img">
-					<img src="./img/product01.png" alt="">
+			@* @foreach (var item in Model.BasketItems)
+			{
+				<div class="product-widget">
+					<div class="product-img">
+						<img src="./images/products/@item.ImageUrl" alt="">
+					</div>
+					<div class="product-body">
+						<h3 class="product-name"><a href="#">@item.Name</a></h3>
+						<h4 class="product-price"><span class="qty">@($"{item.Quantity}x")</span>@($"{item.Price:C2}")</h4>
+					</div>
+				
 				</div>
-				<div class="product-body">
-					<h3 class="product-name"><a href="#">product name goes here</a></h3>
-					<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
-				</div>
-				<button class="delete"><i class="fa fa-close"></i></button>
-			</div>
-
-			<div class="product-widget">
-				<div class="product-img">
-					<img src="./img/product02.png" alt="">
-				</div>
-				<div class="product-body">
-					<h3 class="product-name"><a href="#">product name goes here</a></h3>
-					<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
-				</div>
-				<button class="delete"><i class="fa fa-close"></i></button>
-			</div>
+			} *@
+			
 		</div>
-		<div class="cart-summary">
-			<small>3 Item(s) selected</small>
-			<h5>Toplam: 2940.00 TL</h5>
-		</div>
+		@* <div class="cart-summary">
+			
+			<h5>Toplam:@($"{Model.TotalPrice():C2}")</h5>
+		</div> *@
 		<div class="cart-btns">
 			<a asp-area="" asp-controller="Basket" asp-action="Index">Sepeti Görüntüle</a>
-			<a asp-area="" asp-controller="CheckOut" asp-action="Index">Ödemeye Geç  <i class="fa fa-arrow-circle-right"></i></a>
+			@if (User.Identity.IsAuthenticated)
+			{
+				<a asp-area="" asp-controller="CheckOut" asp-action="Index" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
+			}
+			else
+			{
+				<a asp-area="" asp-controller="Account" asp-action="Login" class="btn btn-danger btn-lg btn-block">Sepeti Onayla</a>
+			}
 		</div>
 	</div>
 </div>
